@@ -1,3 +1,7 @@
 #fxrToolbarButton {
-  list-style-image: url("chrome://foxreplace-os/skin/toolbar-icon.png");
+  -moz-image-region: rect(0px, 24px, 24px, 0px);
+}
+
+toolbar[iconsize="small"] #fxrToolbarButton {
+  -moz-image-region: rect(4px, 40px, 20px, 24px);
 }
