@@ -1,0 +1,3 @@
+#fxrToolbarButton {
+  -moz-image-region: rect(4px, 40px, 20px, 24px);
+}
